apps/media-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 8096
