apps/media-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - "jellyfin.lavrov.nl"
      secretName: jellyfin-tls
  rules:
    - host: "jellyfin.lavrov.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: authelia-auth@kubernetescrd
spec:
  tls:
    - hosts:
        - "jackett.media.lavrov.nl"
        - "radarr.media.lavrov.nl"
        - "sonarr.media.lavrov.nl"
        - "tube.media.lavrov.nl"
        - "files.media.lavrov.nl"
        - "transmission.media.lavrov.nl"
      secretName: ingress-tls
  rules:
    - host: "jackett.media.lavrov.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  number: 80
    - host: "radarr.media.lavrov.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  name: http
    - host: "sonarr.media.lavrov.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  name: http
    - host: "tube.media.lavrov.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tubesync
                port:
                  name: http
    - host: "files.media.lavrov.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  name: http
    - host: "transmission.media.lavrov.nl"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: torrentdam-operator
                port:
                  name: rpc
